# AgentBox

./: .gitignore  LICENSE  README.md
AgentBox-Docker/: .env.example  README.md  docker-compose.yml
AgentBox-Docker-Build/: ALIYUN_ACR.md  Dockerfile  README.md  brew-root-wrapper.sh  build-image.sh  docker-compose.yml  docker-entrypoint.sh
Anex-Credential/: README.md  anex-credential.html
Client/: .eslintrc-auto-import.json  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
Client/public/: config.js  sw.js
Client/scripts/: clean-tauri-cache.mjs  dev.mjs  sync-tauri-dev-url.mjs  sync-tauri-version.mjs
Client/src/: auto-imports.d.ts  main.tsx
Client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
Client/src-tauri/capabilities/: default.json
Client/src-tauri/icons/: icon.icns
Client/src-tauri/nsis/: installer-hooks.nsh
Client/src-tauri/permissions/autogenerated/: clear_desktop_storage.toml  get_auth_preferences.toml  get_desktop_storage_value.toml  get_desktop_update_target.toml  get_startup_preferences.toml  get_theme_preferences.toml  prepare_desktop_update.toml  remove_desktop_storage_value.toml  set_desktop_storage_value.toml  set_startup_preferences.toml  set_theme_preferences.toml
Client/src-tauri/src/: lib.rs  main.rs  tray.rs
Client/src/api/: auth.ts  (+13 more)
Data/: about.json  connect.json  install-packages.json  latest.json  models.json  notice.md  promotion.json
Installation-Script/: README.md  install.ps1  install.sh
Releases-Build/: build.md
Server/: .air.toml  .env.example  README.md  go.mod  go.sum
(+230 files in other folders)
